RESOLVED FIXED117464
Have to invalidate the mute button when changing the volume
https://bugs.webkit.org/show_bug.cgi?id=117464
Summary Have to invalidate the mute button when changing the volume
Ryosuke Niwa
Reported 2013-06-10 18:39:41 PDT
Consider merging https://chromium.googlesource.com/chromium/blink/+/c4c685c82908449526fd8c251cc551e729ebed08 This is because the painting code in RenderMediaControlsChromium.cpp:paintMediaMuteButton depends on the volume, and that code gets called via RenderTheme, so nothing else can invalidate the button. diff --git a/Source/core/html/shadow/MediaControls.cpp b/Source/core/html/shadow/MediaControls.cpp index c418b69..37a0418 100644 --- a/Source/core/html/shadow/MediaControls.cpp +++ b/Source/core/html/shadow/MediaControls.cpp @@ -225,6 +225,8 @@ { if (m_volumeSlider) m_volumeSlider->setVolume(m_mediaController->volume()); + if (m_panelMuteButton && m_panelMuteButton->renderer()) + m_panelMuteButton->renderer()->repaint(); } void MediaControls::changedClosedCaptionsVisibility()
Attachments
Merges the patch (1.35 KB, patch)
2013-06-11 13:39 PDT, Ryosuke Niwa
no flags
Replace tab characters by spaces (1.36 KB, patch)
2013-06-11 14:28 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2013-06-11 13:39:32 PDT
Created attachment 204357 [details] Merges the patch
WebKit Commit Bot
Comment 2 2013-06-11 13:40:19 PDT
Attachment 204357 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/html/shadow/MediaControls.cpp']" exit_code: 1 Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryosuke Niwa
Comment 3 2013-06-11 14:28:26 PDT
Created attachment 204360 [details] Replace tab characters by spaces
Ryosuke Niwa
Comment 4 2013-06-11 14:59:30 PDT
Ryosuke Niwa
Comment 5 2013-06-11 14:59:56 PDT
Comment on attachment 204360 [details] Replace tab characters by spaces The patch has been reviewed by darin. Thanks darin!
Note You need to log in before you can comment on or make changes to this bug.