Have to invalidate the mute button when changing the volume https://bugs.webkit.org/show_bug.cgi?id=117464

Reviewed by Darin Adler.

Merge https://chromium.googlesource.com/chromium/blink/+/c4c685c82908449526fd8c251cc551e729ebed08
but without a test since the test doesn't work in WebKit.

* html/shadow/MediaControls.cpp:
(WebCore::MediaControls::changedVolume):


Canonical link: https://commits.webkit.org/135687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151476 268f45cc-cd09-0410-ab3c-d52691b4dbfc